# learn_gl

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  shader.cpp  shader.h
